--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -2,7 +2,7 @@ name: Docker Image CI
 on:
   push:
     branches:
-      - master
+      - main
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -11,4 +11,6 @@ jobs:
       - name: Login to DockerHub
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} -- password-stdin
       - name: Build the Docker Image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/medihopper
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/medihopper:v1 .
+      - name: Publish to Docker Hub
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/medihopper:v1
