--- a/package.json
+++ b/package.json
@@ -21,6 +21,14 @@
     "express": "*",
     "mongodb": "^3.6.8",
     "mongoose": "^5.12.10",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.6.5",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.3.2",
+    "ejs": "^1.0.0",
+    "express-session":"^1.7.6",
+    "passport": "^0.2.0",
+    "passport-local":"^1.0.0"
   }
 }
