--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "App for making GP bookings",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "start": "nodemon server.js"
   },
   "repository": {
@@ -30,5 +30,9 @@
     "express-session":"^1.7.6",
     "passport": "^0.2.0",
     "passport-local":"^1.0.0"
+  },
+  "devDependencies": {
+    "chai": "^1.9.2",
+    "mocha": "^2.0.1"
   }
 }
