--- a/package.json
+++ b/package.json
@@ -18,18 +18,20 @@
   },
   "homepage": "https://github.com/sir-prem/medihopper#readme",
   "dependencies": {
-    "express": "*",
-    "mongodb": "^3.6.8",
-    "mongoose": "^5.12.10",
-    "nodemon": "^2.0.7",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.6.5",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.3.2",
     "ejs": "^1.0.0",
-    "express-session":"^1.7.6",
+    "express": "*",
+    "express-session": "^1.7.6",
+    "mongodb": "^3.6.8",
+    "mongoose": "^5.12.10",
+    "node-geocoder": "^3.27.0",
+    "nodemon": "^2.0.7",
     "passport": "^0.2.0",
-    "passport-local":"^1.0.0"
+    "passport-local": "^1.0.0",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "chai": "^1.9.2",
