--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "node-geocoder": "^3.27.0",
     "nodemon": "^2.0.7",
     "passport": "^0.2.0",
-    "passport-local": "^1.0.0",
-    "request": "^2.88.2"
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "chai": "^1.9.2",
