--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongodb": "^3.6.8",
     "mongoose": "^5.12.10",
     "morgan": "^1.10.0",
+    "multer": "^1.4.3",
     "node-geocoder": "^3.27.0",
     "nodemon": "^2.0.7",
     "passport": "^0.2.0",
