--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "node-geocoder": "^3.27.0",
     "nodemon": "^2.0.7",
     "passport": "^0.2.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^4.2.0"
   },
   "devDependencies": {
     "chai": "^1.9.2",
